--- a/styles.css
+++ b/styles.css
@@ -11,25 +11,56 @@ body {
 
 main {
   display: grid;
+  min-height: 100%;
   grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   grid-gap: 20px;
 }
 
-.section-block {
-  border: solid 1px;
-  display: flex;
-  flex-direction: column;
-  height: 260px;
-  width: 260px;
-  padding: 20px;
-  justify-content: space-between;
-}
-
-.section-block > #circle {
-  margin: 0 auto;
+label {
+  margin: 7px 0;
+  font-size: 0.8em;
 }
 
 input {
   padding: 10px;
 }
 
+.form {
+  grid-column: 1 / 2;
+  grid-row: 1 / -1;
+}
+
+.details {
+  grid-column: 2 / 3;
+}
+
+.details > div {
+  margin: 10px 0;
+}
+
+.visualization {
+  grid-column: 2 / -1;
+  justify-content: space-between;
+}
+
+.section-block {
+  border: solid 1px;
+  display: flex;
+  flex-direction: column;
+  min-height: 270px;
+  min-width: 270px;
+  padding: 20px;
+}
+
+.section-block > #circle {
+  margin: 0 auto;
+  background-image: url('./images/cheese.jpeg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.vegetarian-div {
+  margin: 15px 0;
+}
